# NFT_Trading_System

./: CMakeLists.txt  README.md  fileConfiguration.md  main  main.cpp  test
CodeSnippet/: offchain.cpp
blockchain/: blockchain.cpp  blockchain.h
encryption/: encryption.cpp  encryption.h
smart_contract/: smart_contract.cpp  smart_contract.h
tests/: test_blockchain.cpp
zkp/: zkp.cpp  zkp.h
